--- a/displaytag-doc/src/site/resources/css/site.css
+++ b/displaytag-doc/src/site/resources/css/site.css
@@ -1,275 +1,226 @@
 body {
-    background-color: #666;
-    min-width: 600px;
-    width: 600px;
-    width: auto !important;
+	background-color: #fff;
+	font-family: Verdana, Helvetica, Arial, sans-serif;
+	margin-left: auto;
+	margin-right: auto;
+	background-repeat: repeat-y;
+	font-size: 13px;
+	padding: 0px;
 }
 
-/* main layout */
-#banner{
- height: 100px;
- color:#000000;
- background-color: #fff !important;
- border: none;
- margin:0 0 0 0;
- border-bottom: 2px solid #FFD700;
+#leftColumn {
+	width: 170px;
+	float: left;
 }
 
-#leftColumn{
-  background-color: transparent;
-  position: absolute;
-  top: 140px;
-  left: 20px;
-  width: 180px;
-  margin: 0px;
-  padding: 0px;
-  border: none;
+#bodyColumn {
+	margin-right: 1.5em;
+	margin-left: 197px;
 }
 
-#bodyColumn{
-  margin: 18px 20px 20px 220px;s
-  border: 2px solid #D2B48C;
-  background-color: #fff;
-  color: #333333;
-  padding: 30px;
-  position:relative;
+td,select,input,li {
+	font-family: Verdana, Helvetica, Arial, sans-serif;
+	font-size: 12px;
+	color: #333333;
 }
 
-#footer div.xright {
-    color: #fff;
-    margin-right: 10px;
+code {
+	font-size: 12px;
 }
 
-/* end main layout */
-.deprecated {
-    text-decoration: line-through;
-}
-.comment {
-    color: green;
-}
-#menuDownloadable_docs li {
-    background-image: url(../images/ico_file_pdf.png);
-    padding-top: 3px;
-    padding-bottom: 1px;
+a {
+	text-decoration: none;
 }
 
-.source pre {
-    font-size: 8pt;
-    font-family: courier;
+a:link {
+	color: #47a;
 }
 
-body,div,span,td,p,h2,h3,ul,ol, dt, dl {
-    font-family: Georgia, Verdana, Geneva, Arial, Helvetica, sans-serif;
-    font-size: 10pt;
-	 border: none;
+a:visited {
+	color: #666666;
 }
 
-table td, table th, table li {
-    font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
-    font-size: 8pt;
-}
-ul, ol {
-    margin-left: 0;
-    padding-left: 15px;
+a:active,a:hover {
+	color: #990000;
 }
 
-
-#breadcrumbs {
-    background-color: transparent;
-    border: none;
-    height: 15px;
+#legend li.externalLink {
+	background: url(../images/ico_external.png) left top no-repeat;
+	padding-left: 18px;
 }
 
+a.externalLink,a.externalLink:link,a.externalLink:visited,a.externalLink:active,a.externalLink:hover
+	{
+	background: url(../images/ico_external.png) right center no-repeat;
+	padding-right: 18px;
+}
 
+#legend li.newWindow {
+	background: url(../images/ico_newwindow.png) left top no-repeat;
+	padding-left: 18px;
+}
+
+a.newWindow,a.newWindow:link,a.newWindow:visited,a.newWindow:active,a.newWindow:hover
+	{
+	background: url(../images/ico_newwindow.png) right center no-repeat;
+	padding-right: 18px;
+}
 
 h2 {
-    border: none;
-    border-bottom: 1px solid #ccc;
-    background-color: transparent;
-    font-size: 12pt;
-    padding-left: 0;
-    font-variant: small-caps;
-    font-family:"Trebuchet MS",arial,sans-serif;
-    text-transform:uppercase;
-    letter-spacing:3px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 19px;
+	color: #666;
+	background: none;
+	font-weight: normal;
+	padding-left: 0;
+	border: none;
+	border-bottom: 1px dotted #ccc;
 }
 
 h3 {
-    border: none;
-    background-color: transparent;
-    font-size: 10pt;
-    font-weight: bolder;
-    padding-left: 0;
-    font-weight: light;
-    font-family:"Trebuchet MS",arial,sans-serif;
-    text-transform: capitalize;
-    letter-spacing:2px;
+	font-family: Arial, Helvetica, sans-serif;
+	padding: 4px 4px 4px 20px;
+	color: #999 !important;
+	background: none;
+	font-weight: none;
+	font-size: 19px;
+	border: none;
+	border-bottom: 1px dotted #ccc;
 }
 
+p {
+	line-height: 1.3em;
+	font-size: 12px;
+	color: #000;
+}
 
+#breadcrumbs {
+	height: 20px;
+	padding: 5px 10px 3px 20px;
+	background-image: url(../images/breadcrumbs.png);
+	background-repeat: repeat-x;
+	border: none;
+}
+
+#breadcrumbs a {
+	font-weight: bold;
+	color: #999;
+	text-decoration: underline;
+}
+
+* html #breadcrumbs {
+	padding-bottom: 8px;
+}
+
+#leftColumn {
+	margin: 10px 0 10px 0;
+	border: 1px solid #ccc;
+	border-left: none;
+	padding-right: 5px;
+	padding-left: 5px;;
+	padding-right: 5px;
+	background-color: #e2f3b8;
+}
 
 #navcolumn h5 {
-    padding: 3px 3px 3px 10px;
-    font-variant: small-caps;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 10px;
-    font-weight: 900;
-    letter-spacing: 1px;
-    border: none;
-    background-image: url(../images/sections.png);
+	font-size: smaller;
+	border-bottom: 1px solid #aaa;
+	padding-top: 2px;
+	padding-left: 9px;
+	color: #49635a;
+	background-repeat: no-repeat;
+	background-position: left bottom;
 }
 
-
-#navcolumn #menuDocumentation h5,
-#navcolumn #menuCore_Tag_library h5,
-#navcolumn #menuExample_application h5,
-#navcolumn #menuExcel_export_module h5 {
-    background-image: none;
-    background-color: #fff;
+table.bodyTable th {
+	color: white;
+	background-color: #bbb;
+	text-align: left;
+	font-weight: bold;
 }
 
-#navcolumn {
-    padding: 0;
+table.bodyTable th,table.bodyTable td {
+	font-size: 11px;
+}
+
+table.bodyTable tr.a {
+	background-color: #ddd;
+}
+
+table.bodyTable tr.b {
+	background-color: #eee;
+}
+
+.source {
+	border: 1px solid #999;
+	overflow: auto;
+	background-color: #eee;
+}
+
+dt {
+	padding: 4px 4px 4px 24px;
+	color: #333333;
+	background-color: #ccc;
+	font-weight: bold;
+	font-size: 14px;
+}
+
+.subsectionTitle {
+	font-size: 13px;
+	font-weight: bold;
+	color: #666;
+}
+
+table {
+	font-size: 10px;
+}
+
+.xright a:link,.xright a:visited,.xright a:active {
+	color: #666;
+}
+
+.xright a:hover {
+	color: #003300;
+}
+
+#banner {
+	height: 93px;
+	background-image: url(../images/displaytag.png);
+	background-repeat: no-repeat;
+	background-position: right;
+	background-color: #e2f3b8;
 }
 
 #navcolumn ul {
-    margin: 2px 0 12px 0;
+	margin: 5px 0 15px -0em;
 }
 
-#navcolumn li {
-    margin: 0px 0 0px 3px;
-    padding: 0 2px 0 2px;
-    list-style-position: outside;
-    font-size: 7.5pt !important;
-    padding-left: 16px !important;
-    padding-left/**/: 2px !important;
+#navcolumn ul a {
+	color: #333333;
 }
 
-
-#navcolumn a {
-    color: #BDB76B;
-    padding-left: 14px;
-    text-decoration: none;
-}
-#navcolumn a:hover {
-    text-decoration: none;
-}
-#navcolumn strong a, #navcolumn a:visited {
-    color: #cc7;
-}
-#navcolumn a img {
-  margin-top: 0;
-}
-#navcolumn a#poweredBy img {
-  margin: -11px 0 0 20px;
-  width: 88px;
-  height: 31px;
-  border: none;
+#navcolumn ul a:hover {
+	color: red;
 }
 
-#navcolumn a:hover {
-    color: Olive;
-    padding-left: 14px;
-    text-decoration: underline;
-    padding-bottom: 2px;
+#intro {
+	border: solid #ccc 1px;
+	margin: 6px 0px 0px 0px;
+	padding: 10px 40px 10px 40px;
 }
 
-#breadcrumbs.xright, #breadcrumbs.xleft {
-    background-color: #fff;
-    padding: 4px;
-    margin-right: 10px;
-    display: inline;
-}
-#breadcrumbs .xleft {
-    font-size: 7pt !important;
-    color: #fff;
+.subsection {
+	margin-left: 3px;
+	color: #333333;
 }
 
-#banner #organizationLogo {
-    display: none;
+.subsection p {
+	font-size: 12px;
 }
 
-
-#banner a#projectLogo img{
-  margin-right: 20px !important;
-  padding: 5px 10px 5px 10px;
-}
-#navcolumn li {
-    color: #fff;
-	 background-position: 0 0 ;
-}
-
-#navcolumn li a.externalLink {
-    background-image: none !important;
-    padding: none;
-}
-
-div.source {
-    background-color: #ddd;
-}
-
-div.source pre, code, td.code {
-    font-size: 8pt !important;
-    font-family: monospace;
-    margin: 0;
-}
-td.code {
-    font-size: 10pt !important;
-    font-family: monospace;
-}
-div#legend {
-    display:none;
-}
-
-tr.even, tr.a {
-  /*background-color: #fea !important;*/
-}
-tr.odd, tr.b {
-  /*background-color: #fff !important;*/
-}
-
-table.bodyTable {
-  border-collapse: collapse;
-}
-table.bodyTable td, table.bodyTable th{
-  border: 1px solid #fff;
-  padding: 3px 5px 3px 5px;
-}
-
-table td.source{
-  border: none !important;
-}
-
-table td, table th {
-  font-size: 8pt !important;
-  font-family: verdana;
-}
-table th {
-  font-weight: bold;
-}
-.collapsed {
-    background-image: url(../images/ico_collapsed.png) !important;
-	 background-position: 2px 2px !important;
-}
-.expanded {
-    background-image: url(../images/ico_expanded.png) !important;
-	 background-position: 2px 2px !important;
-}
-a.externalLink, a.newWindow {
-    padding-right: 9px !important;
-    background-image: none !important; /*ie5*/
-}
-a.externalLink/* */{
-    background-image: url(../images/ico_external.png) !important;
-
-}
-a.newWindow/* */{
-    background-image: url(../images/ico_newwindow.png) !important;
-}
-table {
-  width: 68%;
-}
-i {content: "\"/*" }
-table {
-  width: 100%;
+#footer {
+	padding: 10px;
+	margin: 20px 0px 20px 0px;
+	border-top: solid #ccc 1px;
+	color: #333333;
 }
